Micronaut upgrade